--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,9 @@
   "name": "Hello World Extension",
   "description": "This extension show a pop-up with hello world (text and image)",
   "version": "1.0",
-  "manifest_version": 2
+  "manifest_version": 2,
+  "browser_action": {
+    "default_popup": "popup.html",
+    "default_icon": "images/hello_world.png"
+  }
 }
