--- a/manifest.json
+++ b/manifest.json
@@ -5,6 +5,12 @@
   "manifest_version": 2,
   "browser_action": {
     "default_popup": "popup.html",
-    "default_icon": "images/hello_world.png"
+    "default_icon": "images/icon.png"
+  },
+  "icons": {
+    "16": "images/icon.png",
+    "32": "images/icon.png",
+    "48": "images/icon.png",
+    "128": "images/icon.png"
   }
 }
